--- a/style.css
+++ b/style.css
@@ -50,14 +50,14 @@ li a:hover
 }
 div
 {
-    background-color: rgba(49, 44, 46, 0.5);
+    background-color: rgba(49, 44, 46, 0.8);
     margin-left: 3%;
     margin-right: 3%;
     border-radius: 4%;
 }
 .img
 {
-    background-color: rgba(49, 44, 46, 0.6);
+    background-color: rgba(49, 44, 46, 0.9);
     margin-left: 20%;
     margin-right: 20%;
     text-align: center;
@@ -73,4 +73,19 @@ footer
     margin-left: 45%;
     margin-right: 45%;
     border-radius: 50%;
+}
+form
+{
+    color: black;
+    margin-left: 1.5%;
+}
+table,th,td
+{
+    color: black;
+    font-style: bold;
+    margin-left: 1.5%;
+    text-align: center;
+    border: 1px solid black;
+    border-width: 3px;
+    border-color: black;
 }
