--- a/style.css
+++ b/style.css
@@ -18,6 +18,13 @@ h2
     font-size: 36px;
     text-align: center;
 }
+h3
+{
+    color:black;
+    font-family: Arial;
+    font-size: 32px;
+    text-align: center; 
+}
 p
 {
     font-family: "Times New Roman";
@@ -55,6 +62,14 @@ div
     margin-right: 3%;
     border-radius: 4%;
 }
+.table
+{
+    background-color: rgba(49, 44, 46, 0);
+    margin-left: 38%;
+    margin-right: 20%;
+    border-radius: 50%;
+    font: bold;
+}
 .img
 {
     background-color: rgba(49, 44, 46, 0.9);
@@ -88,4 +103,8 @@ table,th,td
     border: 1px solid black;
     border-width: 3px;
     border-color: black;
+}
+.v1
+{
+    text-align: center;
 }
